# nufftacf

./: .blackignore  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint.yml  tests.yml
api/: index.html
benchmark/: benchmark_acf.py  benchmark_acf_fit_summary_macosx.csv  benchmark_acf_regular.py  benchmark_acf_regular_fit_summary_macosx.csv  benchmark_acf_regular_linuxsandbox_fit_summary.csv  benchmark_acf_regular_results_linuxsandbox.csv  benchmark_acf_regular_results_macosx.csv  benchmark_acf_results_macosx.csv  fit_benchmark_acf.py  fit_benchmark_acf_regular.py
docs/: api.md  index.md  installation.md  license.md  usage.md
docs/javascripts/: mathjax.js
installation/: index.html
license/: index.html
notebook/: nufftacf_ccf_demo.ipynb  pastas_vs_nufftacf_regular.ipynb  pastas_vs_nufftact.ipynb  zdcf_vs_nufftacf.ipynb
search/: search_index.json
src/acf_nufft/: __init__.py  _noparalell_kernels.py  fft_acf.py  utils.py
src/nufftacf/: __init__.py  fft_acf.py  kernels.py  nufft_acf.py  nufft_ccf.py  realspace_acf.py  realspace_ccf.py
tests/: test_acf_nufft.py  test_ccf.py  test_fft_acf.py  test_nufft_acf.py
usage/: index.html
