[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nufftacf"
version = "0.1.0"
description = "Fast autocorrelation function (ACF) estimation for irregularly-sampled time series, via NUFFT + Numba-optimized real-space kernels (gaussian and rectangle)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jean-Eric Campagne", email = "jeaneric.campagne@gmail.com" }
]
keywords = ["nufft", "finufft", "autocorrelation", "acf", "irregular-sampling", "time-series", "numba"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "numba>=0.56",
    "scipy>=1.8",
    "finufft>=2.1",
]

[project.optional-dependencies]
benchmark = ["pastas>=1.0", "matplotlib>=3.5"]
test = ["pytest>=7.0"]
dev = ["black>=24.0", "pytest>=7.0"]

[project.urls]
Homepage   = "https://github.com/jecampagne/nufftacf"
Repository = "https://github.com/jecampagne/nufftacf"
Issues     = "https://github.com/jecampagne/nufftacf/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
